--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -2,7 +2,7 @@
 # platform :ios, "6.0"
 
 target "NSDate-RelativeTime" do
-
+  pod 'NSDate-RelativeTime', path: '../'
 end
 
 target "NSDate-RelativeTimeTests" do
