--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -2,11 +2,11 @@
 # platform :ios, "6.0"
 
 target "NSDate-RelativeTime" do
-  pod 'NSDate-RelativeTime', path: '../'
+  pod 'NSDate+RelativeTime', path: '../'
 end
 
 target "NSDate-RelativeTimeTests" do
-  pod 'NSDate-RelativeTime', path: '../'
+  pod 'NSDate+RelativeTime', path: '../'
   pod 'Kiwi/XCTest'
 end
 
